Switch pics to attempt a fix on iphone

--- a/css/style.css
+++ b/css/style.css
@@ -362,7 +362,7 @@ hr {
 .intro {
 	width:100%;
 	position:relative;
-	background: url(../img/bg4.jpg) no-repeat top center;
+	background: url(../img/bg3.jpg) no-repeat top center;
     background-size: cover;
     height: auto;
     
